# advent-of-code-2023

./: .gitignore  CMakeLists.txt  day20.dot  vcpkg.json
day1/: main.cpp
day10/: main.cpp
day11/: main.cpp
day12/: main.cpp
day12v2/: main.cpp
day13/: main.cpp
day14/: main.cpp
day15/: main.cpp
day16/: main.cpp
day17/: main.cpp
day18/: main.cpp
day19/: main.cpp
day2/: main.cpp
day20/: main.cpp
day22/: main.cpp
day23/: main.cpp
day23v2/: main.cpp
day24/: main.cpp  part2.nb
day25/: main.cpp
day3/: main.cpp
day4/: main.cpp
day5/: main.cpp
day6/: main.cpp
day7/: main.cpp
day8/: main.cpp
day9/: main.cpp
inputs/: day11-test2.txt
src/: core.cpp  core.hpp
tests/: testMain.cpp
